# ali-scrapper

./: docker-compose.yml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/scraper/: rozetka_scraper.py  shafa_scraper.py
scraper/: pyproject.toml
