[tool.poetry]
name = "ali-scraper"
version = "0.1.0"
description = ""
authors = ["riisatoro <riisa.toro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Scrapy = "^2.6.2"
celery = "^5.2.7"
ipdb = "^0.13.9"
ipython = "^8.4.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
